tests/NormalTests/paczka1/fuzzy1/60985418.err
Error in line 10: ihul S428 -2,3
Error in line 8: ihul S428 57,5
Error in line 11: u0pM94C S428 88,2
Error in line 14: ihul A127 93,3
Error in line 15: u0pM94C A127 7,5
Error in line 23: ISqLBUu6 A372 97,2
Error in line 30: S428 S648 32,9
